--- a/src/main/resources/assets/sciencebitch/lang/en_us.lang
+++ b/src/main/resources/assets/sciencebitch/lang/en_us.lang
@@ -3,6 +3,7 @@
 item.copper_ingot.name=Copper Ingot
 item.tin_ingot.name=Tin Ingot
 item.natrium_chunk.name=Natrium Chunk
+item.lead_ingot.name=Lead Ingot
 item.apple_juice_bottle.name=Apple juice Bottle
 item.battery.name=Battery
 
@@ -12,6 +13,8 @@ tile.copper_block.name=Block of Copper
 tile.tin_ore_block.name=Tin Ore 
 tile.tin_block.name=Block of Tin
 tile.natrium_ore_block.name=Natrium Ore
+tile.lead_ore_block.name=Lead Ore
+tile.lead_block.name=Block of Lead
 tile.lemon_leaves_block.name=Lemon leaves
 
 //Machines
