--- a/src/main/resources/assets/sciencebitch/lang/en_us.lang
+++ b/src/main/resources/assets/sciencebitch/lang/en_us.lang
@@ -2,10 +2,16 @@
 //Items
 item.copper_ingot.name=Copper Ingot
 item.tin_ingot.name=Tin Ingot
+item.lead_dust.name=Lead Dust
 item.natrium_chunk.name=Natrium Chunk
+item.iron_dust.name=Iron Dust
+item.gold_dust.name=Gold Dust
+item.copper_dust.name=Copper Dust
+item.tin_dust.name=Tin Dust
 item.lead_ingot.name=Lead Ingot
 item.apple_juice_bottle.name=Apple juice Bottle
 item.battery.name=Battery
+
 
 //Blocks
 tile.copper_ore_block.name=Copper Ore
@@ -23,3 +29,4 @@ tile.pulverizer.name=Pulverizer
 
 //Containers
 container.electric_furnace=Electric Furnace
+container.pulverizer=Pulverizer
