--- a/src/main/resources/assets/sciencebitch/lang/en_us.lang
+++ b/src/main/resources/assets/sciencebitch/lang/en_us.lang
@@ -2,13 +2,18 @@
 //Items
 item.copper_ingot.name=Copper Ingot
 item.tin_ingot.name=Tin Ingot
-item.lead_dust.name=Lead Dust
-item.natrium_chunk.name=Natrium Chunk
+item.lead_ingot.name=Lead Ingot
+item.platin_ingot.name=Platin Ingot
+
 item.iron_dust.name=Iron Dust
 item.gold_dust.name=Gold Dust
 item.copper_dust.name=Copper Dust
 item.tin_dust.name=Tin Dust
-item.lead_ingot.name=Lead Ingot
+item.lead_dust.name=Lead Dust
+item.platin_dust.name=Platin Dust
+
+item.natrium_chunk.name=Natrium Chunk
+
 item.apple_juice_bottle.name=Apple juice Bottle
 item.battery.name=Battery
 
@@ -21,6 +26,8 @@ tile.tin_block.name=Block of Tin
 tile.natrium_ore_block.name=Natrium Ore
 tile.lead_ore_block.name=Lead Ore
 tile.lead_block.name=Block of Lead
+tile.platin_ore_block.name=Platin Ore
+tile.platin_block.name=Block of Platin
 tile.lemon_leaves_block.name=Lemon leaves
 
 //Machines
