--- a/src/main/resources/assets/sciencebitch/lang/en_us.lang
+++ b/src/main/resources/assets/sciencebitch/lang/en_us.lang
@@ -42,14 +42,14 @@ tile.extractor.name=Extractor
 
 //Generators
 tile.combustion_generator.name=Combustion Generator
-tile.lava_generator.name=Lava Generator
+
+tile.copper_cable.name=Copper cable
 
 //Containers
 container.electric_furnace=Electric Furnace
 container.pulverizer=Pulverizer
 container.extractor=Extractor
 container.combustion_generator=Combustion Generator
-container.lava_generator=Lava Generator
 
 //Creative tabs
 itemGroup.machines=Machines
