--- a/src/main/resources/assets/sciencebitch/lang/en_us.lang
+++ b/src/main/resources/assets/sciencebitch/lang/en_us.lang
@@ -43,6 +43,8 @@ tile.extractor.name=Extractor
 //Generators
 tile.combustion_generator.name=Combustion Generator
 
+//Cable
+tile.tin_cable.name=Tin cable
 tile.copper_cable.name=Copper cable
 
 //Containers
